# fomc-archiver

./: Cargo.toml  Makefile  README.md  cron.sh  go.mod
cmd/fomc/: main.go
pkgs/: utils.go
src/: api.rs  config.rs  db.rs  display.rs  main.rs
